Map Generator End

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<!-- phaser -->
 		<script src="phaser.js"></script>
 
+		<!-- Tools -->
+		<script src="Assets/Scripts/Javascript/Tools/MapGenerator.js"></script>
+
 		<!-- Game -->
 		<script src="Assets/Scripts/Javascript/Game.js"></script>
 
