add Story Scene

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/Preload.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/LevelTest.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Title.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/Story.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
