--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 		<!-- Classes -->
 		<script src="Assets/Scripts/Javascript/GameObjects/Ennemy.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/Player.js"></script>
 
 		<!-- Scenes -->
     	<script src="Assets/Scripts/Javascript/Scenes/Splash.js"></script>
