--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<!-- Classes -->
 		<script src="Assets/Scripts/Javascript/GameObjects/Ennemy.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Player.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/Soul.js"></script>
 
 		<!-- Scenes -->
     	<script src="Assets/Scripts/Javascript/Scenes/Splash.js"></script>
