--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/LevelTest.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Title.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Story.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/Ante1.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
