--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<script src="Assets/Scripts/Javascript/GameObjects/Ennemy.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Player.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Soul.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/Out.js"></script>
 
 		<!-- Scenes -->
     	<script src="Assets/Scripts/Javascript/Scenes/Splash.js"></script>
