--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<!-- Tools -->
 		<script src="Assets/Scripts/Javascript/Tools/MapGenerator.js"></script>
+		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
 
 		<!-- Game -->
 		<script src="Assets/Scripts/Javascript/Game.js"></script>
