--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<script src="Assets/Scripts/Javascript/GameObjects/Soul.js"></script>
 
 		<script src="Assets/Scripts/Javascript/GameObjects/Switch.js"></script>
-
+		<script src="Assets/Scripts/Javascript/GameObjects/Door.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Out.js"></script>
 
 
