--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<script src="Assets/Scripts/Javascript/GameObjects/Switch.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Door.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Out.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/Spike.js"></script>
 
 
 		<!-- Scenes -->
