--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/LevelTest.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Title.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Story.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/Tutorial.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante1.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante2.js"></script>
 
