add this fucking dialogue systeme

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<!-- Tools -->
 		<script src="Assets/Scripts/Javascript/Tools/MapGenerator.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
+		<script src="Assets/Scripts/Javascript/Tools/Dialogue.js"></script>
 
 		<!-- Game -->
 		<script src="Assets/Scripts/Javascript/Game.js"></script>
