--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<!-- Tools -->
 		<script src="Assets/Scripts/Javascript/Tools/MapGenerator.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
+		<script src="Assets/Scripts/Javascript/Tools/Dialogue.js"></script>
 
 		<!-- Game -->
 		<script src="Assets/Scripts/Javascript/Game.js"></script>
@@ -41,6 +42,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/Tutorial.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante1.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante2.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/Tuto.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
