--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 		<script src="Assets/Scripts/Javascript/Scenes/Tutorial.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante1.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante2.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/AnteBoss.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/Tuto.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
