--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Dialogue.js"></script>
 
+		<!-- Plugins <--></-->
+		<script src="Assets/Scripts/Javascript/Plugins/Juicy.js"></script>
+
 		<!-- Game -->
 		<script src="Assets/Scripts/Javascript/Game.js"></script>
 
@@ -43,6 +46,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/Ante1.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante2.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Tuto.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/GameOver.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
