add credit scene

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/GameOver.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Ante3.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/AnteBoss.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/Credit.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
