--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<!-- Classes -->
 		<script src="Assets/Scripts/Javascript/GameObjects/Ennemy.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Player.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/Boss.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Soul.js"></script>
 
 		<script src="Assets/Scripts/Javascript/GameObjects/Switch.js"></script>
