Menu pause Mid-Final

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<script src="Assets/Scripts/Javascript/Tools/MapGenerator.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Dialogue.js"></script>
+		<script src="Assets/Scripts/Javascript/Tools/PauseMenu.js"></script>
 
 		<!-- Plugins <--></-->
 		<script src="Assets/Scripts/Javascript/Plugins/Juicy.js"></script>
