Escape Animation : Run + Smoke

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Dialogue.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/PauseMenu.js"></script>
+		<script src="Assets/Scripts/Javascript/Tools/Random.js"></script>
 
 		<!-- Plugins <--></-->
 		<script src="Assets/Scripts/Javascript/Plugins/Juicy.js"></script>
