--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<title>Phaser - Boilerplate</title>
+		<title>UnReap-It</title>
 		<link rel="stylesheet" href="Assets/Scripts/CSS/style.css">
 		<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 	</head>
