add end of demo and new police *oup oup*

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		<script src="Assets/Scripts/Javascript/Scenes/Ante3.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/AnteBoss.js"></script>
 		<script src="Assets/Scripts/Javascript/Scenes/Credit.js"></script>
+		<script src="Assets/Scripts/Javascript/Scenes/EndDemo.js"></script>
 
 		<!-- Game launcher -->
 		<script src="Launcher.js"></script>
