--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		<script src="Assets/Scripts/Javascript/GameObjects/Spike.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Teleport.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Hole.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/DialArea.js"></script>
 
 
 
