--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		<script src="Assets/Scripts/Javascript/GameObjects/Teleport.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/Hole.js"></script>
 		<script src="Assets/Scripts/Javascript/GameObjects/DialArea.js"></script>
+		<script src="Assets/Scripts/Javascript/GameObjects/BossWall.js"></script>
 
 
 
