New Dialogue System

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="Assets/Scripts/Javascript/Tools/Timer.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Dialogue.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/DialArea.js"></script>
+		<script src="Assets/Scripts/Javascript/Tools/AfflictionDialogue.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/PauseMenu.js"></script>
 		<script src="Assets/Scripts/Javascript/Tools/Random.js"></script>
 
